--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="higiene y seguridad">
+    <meta name="description" content="Somos una consultora de higiene, seguridad y medio ambiente dedicada a brindar un servicio integral tanto a empresas industriales como de construcción. Calidad y responsabilidad son nuestro compromiso">
+    <meta name="keywords" content="higiene y seguridad,industria,servicios,programa de seguridad,aviso de obra">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
    
     <link rel="stylesheet" href="./css/estilos.css">
@@ -14,7 +15,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel = "preconnect" href = "https://fonts.gstatic.com">
 <link href = "https://fonts.googleapis.com/css2? family = Signika + Negative: wght @ 600 & display = intercambiar "rel =" hoja de estilo ">
-    <title>PREVENTIVA</title>
+    <title>Preventiva-Home</title>
 </head>
 
 <body>
@@ -26,38 +27,24 @@
         <h1 class="">PREVENTIVA - HIGIENE Y SEGURIDAD</h1> 
      </div>
 
-     <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./index.html">HOME</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./paginas/nosotros.html">NOSOTROS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./paginas/servicio.html">SERVICIOS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./paginas/clientes.html">CLIENTES</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./paginas/contacto.html">CONTACTO</a>
-            </li>
-          </ul>
+     <nav class="navbar navbar-expand-lg navbar-dark" id="nav">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" href="./index.html">HOME<span class="sr-only">(current)</span></a>
+          <a class="nav-link active" href="./paginas/nosotros.html">NOSOTROS</a>
+          <a class="nav-link active" href="./paginas/servicio.html">SERVICIOS</a>
+          <a class="nav-link active" href="./paginas/clientes.html">CLIENTES</a>
+          <a class="nav-link active" href="./paginas/contacto.html">CONTACTOS</a>
         </div>
       </div>
     </nav>
-
     </header>
 
   
-    <main class="fondo">
+    <main class="fondo" id="main">
 
      
         <div class="fondo-color text-white py-5">
